--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -3,27 +3,30 @@
     <div class="contact-div">
       <h1 class="hidden">Contact</h1>
       <article class="contact-card contact-card__anim1">
-        <p class="contact-title">cafe</p>
-        <ul class="contact-list">
-          <li><p class="contact-text">Chicago</p></li>
-          <li>
-            <p class="contact-sub">
-              Fusce ut velit laoreet, tempus arcu molestie vulputate
-            </p>
-          </li>
-          <li><p class="contact-date">Moday - Friday</p></li>
-          <li><p class="contact-time">06:00 AM - 10:00 PM</p></li>
-          <li><p class="contact-date">Saturday - Sunday</p></li>
-          <li><p class="contact-time">08:00 AM - 16:00 PM</p></li>
-          <li>
-            <a class="contact-tel" href="tel:+61(0)383766284"
-              >+61(0) 383 766 284</a
-            >
-          </li>
-          <li><a class="contact-mail" href="mailto:">noreply@envato.com</a></li>
-        </ul>
+        <a href="#open-modal">
+          <p class="contact-title">cafe</p>
+          <ul class="contact-list">
+            <li><p class="contact-text">Chicago</p></li>
+            <li>
+              <p class="contact-sub">
+                Fusce ut velit laoreet, tempus arcu molestie vulputate
+              </p>
+            </li>
+            <li><p class="contact-date">Moday - Friday</p></li>
+            <li><p class="contact-time">06:00 AM - 10:00 PM</p></li>
+            <li><p class="contact-date">Saturday - Sunday</p></li>
+            <li><p class="contact-time">08:00 AM - 16:00 PM</p></li>
+            <li>
+              <a class="contact-tel" href="tel:+61(0)383766284"
+                >+61(0) 383 766 284</a
+              >
+            </li>
+            <li><a class="contact-mail" href="mailto:">noreply@envato.com</a></li>
+          </ul>
+        </a>
       </article>
       <article class="contact-card contact-card__anim2">
+        <a href="#open-modal-2">
         <p class="contact-title contact-title__background-color">FOODTRUCK</p>
         <ul class="contact-list">
           <li><p class="contact-text">Los Angeles</p></li>
@@ -44,7 +47,9 @@
           <li><a class="contact-mail" href="mailto:">noreply@envato.com</a></li>
         </ul>
       </article>
+    </a>
       <article class="contact-card contact-card__anim3">
+        <a href="#open-modal-3">
         <p class="contact-title">cafe</p>
         <ul class="contact-list">
           <li><p class="contact-text">New York</p></li>
@@ -64,6 +69,7 @@
           </li>
           <li><a class="contact-mail" href="mailto:">noreply@envato.com</a></li>
         </ul>
+      </a>
       </article>
     </div>
     <div class="contact-modal">
@@ -84,16 +90,63 @@
       </button>
       <div id="open-modal" class="modal-window">
         <div>
-          <a href="#" title="Close" class="modal-close">
+          <a href="#Contact" title="Close" class="modal-close">
             <svg width="15px" height="15px">
               <use href="./images/close-cross-red.svg#close"></use>
             </svg>
           </a>
-          <h1>Our location</h1>
+          <h1>Our location in Chicago</h1>
           <p>Find us on the map!</p>
           <div class="contact-map">
             <iframe
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11879.668874027699!2d-87.62174871324999!3d41.89463736753213!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880e2caabfd640d1%3A0x86af0f869dc4b0af!2zU3RyZWV0ZXJ2aWxsZSwg0KfQuNC60LDSkdC-LCDQhtC70LvRltC90L7QudGBIDYwNjExLCDQodC_0L7Qu9GD0YfQtdC90ZYg0KjRgtCw0YLQuCDQkNC80LXRgNC40LrQuA!5e0!3m2!1suk!2sua!4v1655023395894!5m2!1suk!2sua"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+          </div>
+          <a
+            href="https://chrome.google.com/webstore/detail/chroma/pkgejkfioihnchalojepdkefnpejomgn?utm_campaign=chromapromo&utm_source=codepen.io"
+            target="_blank"
+          ></a>
+        </div>
+      </div>
+      <div id="open-modal-2" class="modal-window">
+        <div>
+          <a href="#Contact" title="Close" class="modal-close">
+            <svg width="15px" height="15px">
+              <use href="./images/close-cross-red.svg#close"></use>
+            </svg>
+          </a>
+          <h1>Our location in Los Angeles</h1>
+          <p>Find us on the map!</p>
+          <div class="contact-map">
+            <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d40494.58761394648!2d-118.25504495656529!3d34.04463511900827!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c7b58e08cd13%3A0xb74eac0b89b08e66!2sFreehand%20Los%20Angeles!5e0!3m2!1suk!2sua!4v1655286517831!5m2!1suk!2sua" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+          </div>
+          <a
+            href="https://chrome.google.com/webstore/detail/chroma/pkgejkfioihnchalojepdkefnpejomgn?utm_campaign=chromapromo&utm_source=codepen.io"
+            target="_blank"
+          ></a>
+        </div>
+      </div>
+      <div id="open-modal-3" class="modal-window">
+        <div>
+          <a href="#Contact" title="Close" class="modal-close">
+            <svg width="15px" height="15px">
+              <use href="./images/close-cross-red.svg#close"></use>
+            </svg>
+          </a>
+          <h1>Our location in New York</h1>
+          <p>Find us on the map!</p>
+          <div class="contact-map">
+            <iframe
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10468.422405484072!2d-73.98886800985153!3d40.725069298653096!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c259821bab0de1%3A0xc97c4df9856335f1!2sClinton%20St.%20Baking%20Company!5e0!3m2!1suk!2sua!4v1655286593819!5m2!1suk!2sua" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"
               style="border: 0"
               allowfullscreen=""
               loading="lazy"
