--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -17,20 +17,12 @@
     </div>
     <ul class="hero__buttons">
       <li>
-        <button
-          type="button"
-          class="hero__button hero__button--products"
-          onclick="window.location.href = '#products';"
-        >
+        <button type="button" class="hero__button hero__button--products">
           Products
         </button>
       </li>
       <li>
-        <button
-          type="button"
-          class="hero__button hero__button--made"
-          onclick="window.location.href = '#made';"
-        >
+        <button type="button" class="hero__button hero__button--made">
           How it’s made?
         </button>
       </li>
