--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -2,8 +2,8 @@
   <div class="container">
     <div class="contact-div">
       <h1 class="hidden">Contact</h1>
-      <article class="contact-card contact-card__anim1">
-        <a href="#open-modal">
+      <div onclick="location.href='#open-modal';">
+        <div class="contact-card contact-card__anim1">
           <p class="contact-title">cafe</p>
           <ul class="contact-list">
             <li><p class="contact-text">Chicago</p></li>
@@ -16,15 +16,15 @@
             <li><p class="contact-time">06:00 AM - 10:00 PM</p></li>
             <li><p class="contact-date">Saturday - Sunday</p></li>
             <li><p class="contact-time">08:00 AM - 16:00 PM</p></li>
-            <li>
-              <a class="contact-tel" href="tel:+61(0)383766284"
-                >+61(0) 383 766 284</a
-              >
-            </li>
-            <li><a class="contact-mail" href="mailto:">noreply@envato.com</a></li>
+            <address class="contact-block">
+              <ul>
+                <li><a class="contact-tel" href="tel:+61(0)383766284">+61(0) 383 766 284</a></li>
+                <li><a class="contact-mail" href="mailto:noreply@envato.com">noreply@envato.com</a></li>
+              </ul>
+            </address>
           </ul>
-        </a>
-      </article>
+        </div>
+    </div>
       <article class="contact-card contact-card__anim2">
         <a href="#open-modal-2">
         <p class="contact-title contact-title__background-color">FOODTRUCK</p>
@@ -44,7 +44,7 @@
               >+61(0) 383 766 284</a
             >
           </li>
-          <li><a class="contact-mail" href="mailto:">noreply@envato.com</a></li>
+          <li><a class="contact-mail" href="mailto:noreply@envato.com">noreply@envato.com</a></li>
         </ul>
       </article>
     </a>
@@ -67,7 +67,7 @@
               >+61(0) 383 766 284</a
             >
           </li>
-          <li><a class="contact-mail" href="mailto:">noreply@envato.com</a></li>
+          <li><a class="contact-mail" href="mailto:noreply@envato.com">noreply@envato.com</a></li>
         </ul>
       </a>
       </article>
