edit-contact-modal-window

--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -1,12 +1,104 @@
 <section class="contact" id="Contact">
   <div class="container">
+    <h1 class="hidden">Contact</h1>
     <div class="contact-div">
-      <h1 class="hidden">Contact</h1>
-      <div onclick="location.href='#open-modal';">
-        <div class="contact-card contact-card__anim1">
-          <p class="contact-title">cafe</p>
+      <div class="contact-card contact-card__anim1">
+        <p class="contact-title">cafe</p>
+        <ul class="contact-list">
+          <li><p class="contact-text">Chicago</p></li>
+          <li>
+            <p class="contact-sub">
+              Fusce ut velit laoreet, tempus arcu molestie vulputate
+            </p>
+          </li>
+          <li><p class="contact-date">Moday - Friday</p></li>
+          <li><p class="contact-time">06:00 AM - 10:00 PM</p></li>
+          <li><p class="contact-date">Saturday - Sunday</p></li>
+          <li><p class="contact-time">08:00 AM - 16:00 PM</p></li>
+          <address class="contact-block">
+            <ul>
+              <li>
+                <a class="contact-tel" href="tel:+61(0)383766284"
+                  >+61(0) 383 766 284</a
+                >
+              </li>
+              <li>
+                <a class="contact-mail" href="mailto:noreply@envato.com"
+                  >noreply@envato.com</a
+                >
+              </li>
+            </ul>
+          </address>
+        </ul>
+      </div>
+
+      <div class="contact-card contact-card__anim2">
+        <p class="contact-title contact-title__background-color">FOODTRUCK</p>
+        <ul class="contact-list">
+          <li><p class="contact-text">Chicago</p></li>
+          <li>
+            <p class="contact-sub">
+              Fusce ut velit laoreet, tempus arcu molestie vulputate
+            </p>
+          </li>
+          <li><p class="contact-date">Moday - Friday</p></li>
+          <li><p class="contact-time">06:00 AM - 10:00 PM</p></li>
+          <li><p class="contact-date">Saturday - Sunday</p></li>
+          <li><p class="contact-time">08:00 AM - 16:00 PM</p></li>
+          <address class="contact-block">
+            <ul>
+              <li>
+                <a class="contact-tel" href="tel:+61(0)383766284"
+                  >+61(0) 383 766 284</a
+                >
+              </li>
+              <li>
+                <a class="contact-mail" href="mailto:noreply@envato.com"
+                  >noreply@envato.com</a
+                >
+              </li>
+            </ul>
+          </address>
+        </ul>
+      </div>
+
+      <div class="contact-card contact-card__anim3">
+        <p class="contact-title">cafe</p>
+        <ul class="contact-list">
+          <li><p class="contact-text">Chicago</p></li>
+          <li>
+            <p class="contact-sub">
+              Fusce ut velit laoreet, tempus arcu molestie vulputate
+            </p>
+          </li>
+          <li><p class="contact-date">Moday - Friday</p></li>
+          <li><p class="contact-time">06:00 AM - 10:00 PM</p></li>
+          <li><p class="contact-date">Saturday - Sunday</p></li>
+          <li><p class="contact-time">08:00 AM - 16:00 PM</p></li>
+          <address class="contact-block">
+            <ul>
+              <li>
+                <a class="contact-tel" href="tel:+61(0)383766284"
+                  >+61(0) 383 766 284</a
+                >
+              </li>
+              <li>
+                <a class="contact-mail" href="mailto:noreply@envato.com"
+                  >noreply@envato.com</a
+                >
+              </li>
+            </ul>
+          </address>
+        </ul>
+      </div>
+    </div>
+
+    <!--      
+      <div>
+        <div class="contact-card contact-card__anim2">
+          <p class="contact-title contact-title__background-color">FOODTRUCK</p>
           <ul class="contact-list">
-            <li><p class="contact-text">Chicago</p></li>
+            <li><p class="contact-text">Los Angeles</p></li>
             <li>
               <p class="contact-sub">
                 Fusce ut velit laoreet, tempus arcu molestie vulputate
@@ -16,62 +108,48 @@
             <li><p class="contact-time">06:00 AM - 10:00 PM</p></li>
             <li><p class="contact-date">Saturday - Sunday</p></li>
             <li><p class="contact-time">08:00 AM - 16:00 PM</p></li>
-            <address class="contact-block">
-              <ul>
-                <li><a class="contact-tel" href="tel:+61(0)383766284">+61(0) 383 766 284</a></li>
-                <li><a class="contact-mail" href="mailto:noreply@envato.com">noreply@envato.com</a></li>
-              </ul>
-            </address>
+            <li>
+              <a class="contact-tel" href="tel:+61(0)383766284"
+                >+61(0) 383 766 284</a
+              >
+            </li>
+            <li>
+              <a class="contact-mail" href="mailto:noreply@envato.com"
+                >noreply@envato.com</a
+              >
+            </li>
           </ul>
         </div>
-    </div>
-      <article class="contact-card contact-card__anim2">
-        <a href="#open-modal-2">
-        <p class="contact-title contact-title__background-color">FOODTRUCK</p>
-        <ul class="contact-list">
-          <li><p class="contact-text">Los Angeles</p></li>
-          <li>
-            <p class="contact-sub">
-              Fusce ut velit laoreet, tempus arcu molestie vulputate
-            </p>
-          </li>
-          <li><p class="contact-date">Moday - Friday</p></li>
-          <li><p class="contact-time">06:00 AM - 10:00 PM</p></li>
-          <li><p class="contact-date">Saturday - Sunday</p></li>
-          <li><p class="contact-time">08:00 AM - 16:00 PM</p></li>
-          <li>
-            <a class="contact-tel" href="tel:+61(0)383766284"
-              >+61(0) 383 766 284</a
-            >
-          </li>
-          <li><a class="contact-mail" href="mailto:noreply@envato.com">noreply@envato.com</a></li>
-        </ul>
-      </article>
-    </a>
+      </div>
+
       <article class="contact-card contact-card__anim3">
         <a href="#open-modal-3">
-        <p class="contact-title">cafe</p>
-        <ul class="contact-list">
-          <li><p class="contact-text">New York</p></li>
-          <li>
-            <p class="contact-sub">
-              Fusce ut velit laoreet, tempus arcu molestie vulputate
-            </p>
-          </li>
-          <li><p class="contact-date">Moday - Friday</p></li>
-          <li><p class="contact-time">06:00 AM - 10:00 PM</p></li>
-          <li><p class="contact-date">Saturday - Sunday</p></li>
-          <li><p class="contact-time">08:00 AM - 16:00 PM</p></li>
-          <li>
-            <a class="contact-tel" href="tel:+61(0)383766284"
-              >+61(0) 383 766 284</a
-            >
-          </li>
-          <li><a class="contact-mail" href="mailto:noreply@envato.com">noreply@envato.com</a></li>
-        </ul>
-      </a>
+          <p class="contact-title">cafe</p>
+          <ul class="contact-list">
+            <li><p class="contact-text">New York</p></li>
+            <li>
+              <p class="contact-sub">
+                Fusce ut velit laoreet, tempus arcu molestie vulputate
+              </p>
+            </li>
+            <li><p class="contact-date">Moday - Friday</p></li>
+            <li><p class="contact-time">06:00 AM - 10:00 PM</p></li>
+            <li><p class="contact-date">Saturday - Sunday</p></li>
+            <li><p class="contact-time">08:00 AM - 16:00 PM</p></li>
+            <li>
+              <a class="contact-tel" href="tel:+61(0)383766284"
+                >+61(0) 383 766 284</a
+              >
+            </li>
+            <li>
+              <a class="contact-mail" href="mailto:noreply@envato.com"
+                >noreply@envato.com</a
+              >
+            </li>
+          </ul>
+        </a>
       </article>
-    </div>
+    </div> -->
     <div class="contact-modal">
       <a class="btn contact-button contact-button__margin" href="#open-modal"
         >Our Locations
@@ -88,6 +166,7 @@
           <use href="./images/symbol-defs.svg#icon-button-arrow"></use>
         </svg>
       </button>
+
       <div id="open-modal" class="modal-window">
         <div>
           <a href="#Contact" title="Close" class="modal-close">
@@ -112,9 +191,10 @@
           ></a>
         </div>
       </div>
-      <div id="open-modal-2" class="modal-window">
+
+      <div id="open-modal-2" class="modal-window1">
         <div>
-          <a href="#Contact" title="Close" class="modal-close">
+          <a href="#Contact" title="Close" class="modal-close1">
             <svg width="15px" height="15px">
               <use href="./images/close-cross-red.svg#close"></use>
             </svg>
@@ -123,11 +203,17 @@
           <p>Find us on the map!</p>
           <div class="contact-map">
             <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d40494.58761394648!2d-118.25504495656529!3d34.04463511900827!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c7b58e08cd13%3A0xb74eac0b89b08e66!2sFreehand%20Los%20Angeles!5e0!3m2!1suk!2sua!4v1655286517831!5m2!1suk!2sua" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">              style="border: 0"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d40494.58761394648!2d-118.25504495656529!3d34.04463511900827!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c7b58e08cd13%3A0xb74eac0b89b08e66!2sFreehand%20Los%20Angeles!5e0!3m2!1suk!2sua!4v1655286517831!5m2!1suk!2sua"
+              width="600"
+              height="450"
+              style="border: 0"
               allowfullscreen=""
               loading="lazy"
               referrerpolicy="no-referrer-when-downgrade"
-            ></iframe>
+            >
+              style="border: 0" allowfullscreen="" loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade" ></iframe
+            >
           </div>
           <a
             href="https://chrome.google.com/webstore/detail/chroma/pkgejkfioihnchalojepdkefnpejomgn?utm_campaign=chromapromo&utm_source=codepen.io"
@@ -135,9 +221,10 @@
           ></a>
         </div>
       </div>
-      <div id="open-modal-3" class="modal-window">
+
+      <div id="open-modal-3" class="modal-window2">
         <div>
-          <a href="#Contact" title="Close" class="modal-close">
+          <a href="#Contact" title="Close" class="modal-close2">
             <svg width="15px" height="15px">
               <use href="./images/close-cross-red.svg#close"></use>
             </svg>
@@ -146,7 +233,14 @@
           <p>Find us on the map!</p>
           <div class="contact-map">
             <iframe
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10468.422405484072!2d-73.98886800985153!3d40.725069298653096!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c259821bab0de1%3A0xc97c4df9856335f1!2sClinton%20St.%20Baking%20Company!5e0!3m2!1suk!2sua!4v1655286593819!5m2!1suk!2sua" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"
+              <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10468.422405484072!2d-73.98886800985153!3d40.725069298653096!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c259821bab0de1%3A0xc97c4df9856335f1!2sClinton%20St.%20Baking%20Company!5e0!3m2!1suk!2sua!4v1655286593819!5m2!1suk!2sua"
+              width="600"
+              height="450"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
               style="border: 0"
               allowfullscreen=""
               loading="lazy"
