--- a/src/sass/_contact.scss
+++ b/src/sass/_contact.scss
@@ -26,7 +26,6 @@
     &:last-child {
       margin-bottom: 32px;
     }
-    
   }
   @media screen and (min-width: 768px) {
     max-width: 395px;
@@ -47,7 +46,7 @@
   @media screen and (min-width: 768px) {
     display: flex;
     .contact-card:first-child {
-      margin-left: 18px;
+      margin-left: 0;
     }
     // .contact-card:last-child {
     //   margin-right: 18px;
@@ -82,7 +81,7 @@
         from {
           transform: translateY(0);
         }
-    
+
         to {
           transform: translateY(-20px);
         }
@@ -99,16 +98,16 @@
         from {
           transform: translateY(-20px);
         }
-    
+
         to {
           transform: translateY(0);
         }
       }
     }
   }
-  
+
   .contact-card__anim2 {
-    margin-left: 32px;
+    // margin-left: 32px;
     transform: translateY(0);
     animation-delay: 0.3s;
     animation-name: card-up;
@@ -171,7 +170,6 @@
     }
   }
 }
-
 
 //end-animation
 
@@ -346,34 +344,33 @@
 .contact-button__background-color {
   background-color: $button-secondary-color;
   color: $primary-color;
-  padding: 0 40px;
+  padding: 0 50px;
   transition: $timing-function 250ms;
 }
 .contact-button__background-color:hover {
   background-color: #ecebeb;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
 }
 
 //modal test
 
-.modal-window {
+.modal-window,
+.modal-window1,
+.modal-window2 {
   position: fixed;
   background-color: rgba(46, 6, 5, 0.3);
   top: 0;
   right: 0;
   bottom: 0;
+  width: 100%;
+  height: 100%;
   left: 0;
   z-index: 1;
   visibility: hidden;
   opacity: 0;
   pointer-events: none;
   transition: all 0.3s;
-  &:target {
-    visibility: visible;
-    opacity: 1;
-    pointer-events: auto;
-  }
+
   & > div {
     width: 80%;
     height: 80%;
@@ -388,6 +385,7 @@
     background: white;
     border-radius: 30px;
   }
+
   h1 {
     font-size: 22px;
     margin: 0 0 15px;
@@ -396,8 +394,14 @@
     margin-bottom: 15px;
   }
 }
-
-.modal-close {
+.card-visible {
+  visibility: visible;
+  opacity: 1;
+  pointer-events: auto;
+}
+.modal-close,
+.modal-close1,
+.modal-close2 {
   position: absolute;
   right: 0;
   top: 0;
