--- a/src/sass/_contact.scss
+++ b/src/sass/_contact.scss
@@ -273,6 +273,7 @@
   font-weight: 500;
   font-size: 12px;
   line-height: 150%;
+  display: block;
   color: $text-grey-color;
   @media screen and (min-width: 768px) {
     font-size: 14px;
