--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -15,14 +15,16 @@
           <li><p class="contact-time">06:00 AM - 10:00 PM</p></li>
           <li><p class="contact-date">Saturday - Sunday</p></li>
           <li><p class="contact-time">08:00 AM - 16:00 PM</p></li>
-          <address class="contact-block">
-            <a class="contact-tel" href="tel:+61(0)383766284"
-              >+61(0) 383 766 284</a
-            >
+          <address>
+            <div class="contact-block">
+              <a class="contact-tel" href="tel:+61(0)383766284"
+                >+61(0) 383 766 284</a
+              >
 
-            <a class="contact-mail" href="mailto:noreply@envato.com"
-              >noreply@envato.com</a
-            >
+              <a class="contact-mail" href="mailto:noreply@envato.com"
+                >noreply@envato.com</a
+              >
+            </div>
           </address>
         </ul>
       </div>
@@ -40,14 +42,16 @@
           <li><p class="contact-time">06:00 AM - 10:00 PM</p></li>
           <li><p class="contact-date">Saturday - Sunday</p></li>
           <li><p class="contact-time">08:00 AM - 16:00 PM</p></li>
-          <address class="contact-block">
-            <a class="contact-tel" href="tel:+61(0)383766284"
-              >+61(0) 383 766 284</a
-            >
+          <address>
+            <div class="contact-block">
+              <a class="contact-tel" href="tel:+61(0)383766284"
+                >+61(0) 383 766 284</a
+              >
 
-            <a class="contact-mail" href="mailto:noreply@envato.com"
-              >noreply@envato.com</a
-            >
+              <a class="contact-mail" href="mailto:noreply@envato.com"
+                >noreply@envato.com</a
+              >
+            </div>
           </address>
         </ul>
       </div>
@@ -65,14 +69,16 @@
           <li><p class="contact-time">06:00 AM - 10:00 PM</p></li>
           <li><p class="contact-date">Saturday - Sunday</p></li>
           <li><p class="contact-time">08:00 AM - 16:00 PM</p></li>
-          <address class="contact-block">
-            <a class="contact-tel" href="tel:+61(0)383766284"
-              >+61(0) 383 766 284</a
-            >
+          <address>
+            <div class="contact-block">
+              <a class="contact-tel" href="tel:+61(0)383766284"
+                >+61(0) 383 766 284</a
+              >
 
-            <a class="contact-mail" href="mailto:noreply@envato.com"
-              >noreply@envato.com</a
-            >
+              <a class="contact-mail" href="mailto:noreply@envato.com"
+                >noreply@envato.com</a
+              >
+            </div>
           </address>
         </ul>
       </div>
