contact fix html validation

--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -15,15 +15,12 @@
           <li><p class="contact-time">06:00 AM - 10:00 PM</p></li>
           <li><p class="contact-date">Saturday - Sunday</p></li>
           <li><p class="contact-time">08:00 AM - 16:00 PM</p></li>
-          <address>
-            <a class="contact-tel" href="tel:+61(0)383766284"
-              >+61(0) 383 766 284</a
-            >
-
-            <a class="contact-mail" href="mailto:noreply@envato.com"
-              >noreply@envato.com</a
-            >
-          </address>
+          <li>
+            <a class="contact-tel" href="tel:+61(0)383766284">+61(0) 383 766 284</a>
+          </li>
+          <li>
+            <a class="contact-mail" href="mailto:noreply@envato.com">noreply@envato.com</a>
+          </li>
         </ul>
       </div>
 
@@ -40,15 +37,12 @@
           <li><p class="contact-time">06:00 AM - 10:00 PM</p></li>
           <li><p class="contact-date">Saturday - Sunday</p></li>
           <li><p class="contact-time">08:00 AM - 16:00 PM</p></li>
-          <address>
-            <a class="contact-tel" href="tel:+61(0)383766284"
-              >+61(0) 383 766 284</a
-            >
-
-            <a class="contact-mail" href="mailto:noreply@envato.com"
-              >noreply@envato.com</a
-            >
-          </address>
+          <li>
+            <a class="contact-tel" href="tel:+61(0)383766284">+61(0) 383 766 284</a>
+          </li>
+          <li>
+            <a class="contact-mail" href="mailto:noreply@envato.com">noreply@envato.com</a>
+          </li>
         </ul>
       </div>
 
@@ -65,15 +59,12 @@
           <li><p class="contact-time">06:00 AM - 10:00 PM</p></li>
           <li><p class="contact-date">Saturday - Sunday</p></li>
           <li><p class="contact-time">08:00 AM - 16:00 PM</p></li>
-          <address>
-            <a class="contact-tel" href="tel:+61(0)383766284"
-              >+61(0) 383 766 284</a
-            >
-
-            <a class="contact-mail" href="mailto:noreply@envato.com"
-              >noreply@envato.com</a
-            >
-          </address>
+          <li>
+            <a class="contact-tel" href="tel:+61(0)383766284">+61(0) 383 766 284</a>
+          </li>
+          <li>
+            <a class="contact-mail" href="mailto:noreply@envato.com">noreply@envato.com</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -137,11 +128,8 @@
               style="border: 0"
               allowfullscreen=""
               loading="lazy"
-              referrerpolicy="no-referrer-when-downgrade"
-            >
-              style="border: 0" allowfullscreen="" loading="lazy"
-              referrerpolicy="no-referrer-when-downgrade" ></iframe
-            >
+              referrerpolicy="no-referrer-when-downgrade">
+              </iframe>
           </div>
           <a
             href="https://chrome.google.com/webstore/detail/chroma/pkgejkfioihnchalojepdkefnpejomgn?utm_campaign=chromapromo&utm_source=codepen.io"
@@ -161,19 +149,14 @@
           <p>Find us on the map!</p>
           <div class="contact-map">
             <iframe
-              <iframe
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10468.422405484072!2d-73.98886800985153!3d40.725069298653096!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c259821bab0de1%3A0xc97c4df9856335f1!2sClinton%20St.%20Baking%20Company!5e0!3m2!1suk!2sua!4v1655286593819!5m2!1suk!2sua"
               width="600"
               height="450"
               style="border: 0"
               allowfullscreen=""
               loading="lazy"
-              referrerpolicy="no-referrer-when-downgrade"
-              style="border: 0"
-              allowfullscreen=""
-              loading="lazy"
-              referrerpolicy="no-referrer-when-downgrade"
-            ></iframe>
+              referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
           </div>
           <a
             href="https://chrome.google.com/webstore/detail/chroma/pkgejkfioihnchalojepdkefnpejomgn?utm_campaign=chromapromo&utm_source=codepen.io"
