--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -138,10 +138,7 @@
               allowfullscreen=""
               loading="lazy"
               referrerpolicy="no-referrer-when-downgrade"
-            >
-              style="border: 0" allowfullscreen="" loading="lazy"
-              referrerpolicy="no-referrer-when-downgrade" ></iframe
-            >
+            ></iframe>
           </div>
           <a
             href="https://chrome.google.com/webstore/detail/chroma/pkgejkfioihnchalojepdkefnpejomgn?utm_campaign=chromapromo&utm_source=codepen.io"
