--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -5,7 +5,9 @@
   width: 100%;
   z-index: 500;
 }
-
+.no-scroll {
+  overflow: hidden;
+}
 .header .container {
   display: flex;
   justify-content: space-between;
