--- a/src/sass/_contact.scss
+++ b/src/sass/_contact.scss
@@ -400,6 +400,11 @@
   opacity: 1;
   pointer-events: auto;
 }
+.card-hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: auto;
+}
 .modal-close,
 .modal-close1,
 .modal-close2 {
